--- a/analysis/main.ipynb
+++ b/analysis/main.ipynb
@@ -1,18 +1,93 @@
 {
  "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# So Long Sucker - Silent vs Talking Mode Analysis\n",
-    "\n",
-    "**Research Question:** Does negotiation influence LLM game outcomes, or are they just pattern-matching?\n",
-    "\n",
-    "**Dataset:** 43 games each (Silent mode vs Talking mode), 3 chips per player\n",
-    "\n",
-    "**Models:** gemini-3-flash, kimi-k2, qwen3-32b, gpt-oss-120b"
-   ]
-  },
+   {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "# Do LLMs Lie or Bullshit? Strategic Deception in Multi-Agent Games\n",
+     "\n",
+     "**Apart Research Hackathon - AI Deception Study**\n",
+     "\n",
+     "---\n",
+     "\n",
+     "## Executive Summary\n",
+     "\n",
+     "We simulated 86 games of \"So Long Sucker\" — a negotiation/betrayal board game designed by game theorists John Nash, Lloyd Shapley, Mel Hausner, and Martin Shubik — with 4 frontier LLMs to investigate a fundamental question about AI deception:\n",
+     "\n",
+     "> **Do LLMs strategically deceive (LYING), or just produce plausible-sounding noise (BULLSHITTING)?**\n",
+     "\n",
+     "Following Harry Frankfurt's philosophical framework:\n",
+     "- **LYING** = Knows the truth, tracks it internally, chooses to misrepresent\n",
+     "- **BULLSHITTING** = Produces plausible output without truth-tracking\n",
+     "\n",
+     "### Key Findings\n",
+     "\n",
+     "| Finding | Evidence |\n",
+     "|---------|----------|\n",
+     "| **3 of 4 models are LIARS** | Private reasoning contradicts public statements (107 instances) |\n",
+     "| **1 model is a BULLSHITTER** | Never uses private reasoning, 58 hallucinated game states |\n",
+     "| **Chat reduces win variance by 88%** | Negotiation equalizes outcomes across models |\n",
+     "| **The Talker's Paradox** | gpt-oss talks 62% of messages but loses 35% more with chat |\n",
+     "| **Cold manipulation wins** | Gemini's gaslighting correlates with +26% win rate |\n",
+     "| **LLMs show Theory of Mind** | \"Alliance Bank\" scam demonstrates multi-turn strategic planning |\n",
+     "\n",
+     "### Model Classifications\n",
+     "\n",
+     "| Model | Classification | Key Evidence |\n",
+     "|-------|----------------|---------------|\n",
+     "| **gemini-3-flash** | LIAR | 49 deception instances, gaslighting, \"Alliance Bank\" scam |\n",
+     "| **kimi-k2** | LIAR | 46 deception instances, 90 private reasoning turns |\n",
+     "| **qwen3-32b** | LIAR | 12 deception instances, 69.6% think-action coherence |\n",
+     "| **gpt-oss-120b** | BULLSHITTER | 0 private reasoning turns, 58 hallucinations |\n",
+     "\n",
+     "### AI Safety Implications\n",
+     "\n",
+     "- **Lying models are MORE dangerous**: They track truth and strategically choose to deceive\n",
+     "- **Different mitigation strategies needed**: Liars need chain-of-thought auditing; bullshitters need grounding\n",
+     "- **Private reasoning reveals hidden intentions**: The `think` tool exposes strategic planning\n",
+     "\n",
+     "---"
+    ]
+   },
+   {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "## Table of Contents\n",
+     "\n",
+     "### Part I: Data & Methodology\n",
+     "1. [Setup & Load Data](#1.-Setup-&-Load-Data)\n",
+     "2. [Exploratory Data Analysis](#2.-Exploratory-Data-Analysis-(EDA))\n",
+     "3. [Comparison Analysis](#3.-Comparison-Analysis)\n",
+     "4. [Visualization](#4.-Visualization)\n",
+     "\n",
+     "### Part II: Core Findings\n",
+     "5. [Key Findings & Research Question](#5.-Key-Findings-&-Research-Question)\n",
+     "6. [Deep Analysis: Negotiation Patterns](#6.-Deep-Analysis:-Negotiation-Patterns)\n",
+     "7. [Statistical Analysis](#7.-Statistical-Analysis)\n",
+     "8. [Summary & Key Insights](#8.-Final-Summary-&-Key-Insights)\n",
+     "\n",
+     "### Part III: Deception Analysis\n",
+     "9. [Adversarial Analysis: Deception & Betrayal](#9.-Adversarial-Analysis:-Deception-&-Betrayal)\n",
+     "10. [DePaulo Pre-Betrayal Linguistic Analysis](#10.-DePaulo-Pre-Betrayal-Linguistic-Analysis)\n",
+     "11. [Lying vs Bullshitting Analysis](#11.-Lying-vs-Bullshitting-Analysis) *(Core Research Question)*\n",
+     "12. [Emergent Deception Patterns](#12.-Emergent-Deception-Patterns)\n",
+     "\n",
+     "---\n",
+     "\n",
+     "### Dataset Overview\n",
+     "\n",
+     "| Metric | Value |\n",
+     "|--------|-------|\n",
+     "| Total Games | 86 (43 silent + 43 talking) |\n",
+     "| Chips per Player | 3 |\n",
+     "| Total Decisions | 7,956 |\n",
+     "| Total Chat Messages | 4,768 |\n",
+     "| Models Tested | 4 frontier LLMs |\n",
+     "\n",
+     "---"
+    ]
+   },
   {
    "cell_type": "markdown",
    "metadata": {},
