--- a/analysis/full_analysis.ipynb
+++ b/analysis/full_analysis.ipynb
@@ -72,16 +72,19 @@
     "7. [Chat Patterns & The Talker's Paradox](#7.-Chat-Patterns)\n",
     "8. [Negotiation Keywords](#8.-Negotiation-Keywords)\n",
     "9. [Message Timing (Early/Mid/Late)](#9.-Message-Timing)\n",
+    "10. [Alliance Formation Patterns](#10.-Alliance-Formation-Patterns)\n",
+    "11. [Statistical Analysis](#11.-Statistical-Analysis)\n",
     "\n",
-    "### Part IV: Deception Analysis\n",
-    "10. [Lying vs Bullshitting Framework](#10.-Lying-vs-Bullshitting)\n",
-    "11. [Private Reasoning Analysis](#11.-Private-Reasoning)\n",
-    "12. [Deception Tactics by Model](#12.-Deception-Tactics)\n",
-    "13. [DePaulo Pre-Betrayal Patterns](#13.-DePaulo-Analysis)\n",
+    "### Part IV: Adversarial & Deception Analysis\n",
+    "12. [Adversarial Analysis: Extended](#12.-Adversarial-Analysis-Extended)\n",
+    "13. [Lying vs Bullshitting Framework](#13.-Lying-vs-Bullshitting)\n",
+    "14. [Private Reasoning Analysis](#14.-Private-Reasoning)\n",
+    "15. [Deception Tactics by Model](#15.-Deception-Tactics)\n",
+    "16. [DePaulo Pre-Betrayal Patterns](#16.-DePaulo-Analysis)\n",
     "\n",
     "### Part V: Conclusions\n",
-    "14. [AI Safety Implications](#14.-AI-Safety-Implications)\n",
-    "15. [Summary Statistics](#15.-Summary)\n",
+    "17. [AI Safety Implications](#17.-AI-Safety-Implications)\n",
+    "18. [Summary Statistics](#18.-Summary)\n",
     "\n",
     "---"
    ]
@@ -1452,7 +1455,377 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Lying vs Bullshitting Framework"
+    "## 10. Alliance Formation Patterns\n",
+    "\n",
+    "Who initiates alliances vs. who receives them? This reveals negotiation styles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Track who proposes alliances with whom\n",
+    "# We need to work with raw data for detailed alliance tracking\n",
+    "\n",
+    "alliance_stats = []\n",
+    "\n",
+    "for model in ['gemini-3-flash', 'kimi-k2', 'qwen3-32b', 'gpt-oss-120b']:\n",
+    "    model_msgs = chat_df[chat_df['model'] == model]['message'].tolist()\n",
+    "    \n",
+    "    # Count mentions of other colors in alliance context\n",
+    "    initiates = 0\n",
+    "    for msg in model_msgs:\n",
+    "        msg_lower = msg.lower()\n",
+    "        if any(kw in msg_lower for kw in ALLIANCE_KEYWORDS):\n",
+    "            # Count mentions of other colors\n",
+    "            for color in ['red', 'blue', 'green', 'yellow']:\n",
+    "                if color in msg_lower:\n",
+    "                    initiates += 1\n",
+    "    \n",
+    "    # Estimate receives (mentions of this model's color by others)\n",
+    "    color_for_model = {'gemini-3-flash': 'red', 'kimi-k2': 'blue', 'qwen3-32b': 'green', 'gpt-oss-120b': 'yellow'}\n",
+    "    my_color = color_for_model[model]\n",
+    "    \n",
+    "    receives = 0\n",
+    "    other_msgs = chat_df[chat_df['model'] != model]['message'].tolist()\n",
+    "    for msg in other_msgs:\n",
+    "        msg_lower = msg.lower()\n",
+    "        if any(kw in msg_lower for kw in ALLIANCE_KEYWORDS) and my_color in msg_lower:\n",
+    "            receives += 1\n",
+    "    \n",
+    "    ratio = initiates / receives if receives > 0 else float('inf')\n",
+    "    role = 'Initiator' if ratio > 1.5 else 'Receiver' if ratio < 0.67 else 'Balanced'\n",
+    "    \n",
+    "    alliance_stats.append({\n",
+    "        'Model': model,\n",
+    "        'Initiates': initiates,\n",
+    "        'Receives': receives,\n",
+    "        'Role': role\n",
+    "    })\n",
+    "\n",
+    "alliance_df = pd.DataFrame(alliance_stats)\n",
+    "print('Alliance Initiative (Who proposes alliances):')\n",
+    "alliance_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Statistical Analysis\n",
+    "\n",
+    "### 11.1 Winner vs Loser Behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze winner vs loser behavior across all games\n",
+    "# Build a mapping of game_id -> winner\n",
+    "game_winners = games_df.set_index('game_id')['winner'].to_dict()\n",
+    "\n",
+    "# Color to model mapping\n",
+    "color_to_model = {'red': 'gemini-3-flash', 'blue': 'kimi-k2', 'green': 'qwen3-32b', 'yellow': 'gpt-oss-120b'}\n",
+    "\n",
+    "# Track behaviors\n",
+    "winner_stats = {'chats': [], 'thinks': [], 'kills': []}\n",
+    "loser_stats = {'chats': [], 'thinks': [], 'kills': []}\n",
+    "\n",
+    "# Aggregate by game and player\n",
+    "for (game_id, player), group in decisions_df.groupby(['game_id', 'player']):\n",
+    "    if game_id not in game_winners or pd.isna(game_winners[game_id]):\n",
+    "        continue\n",
+    "    \n",
+    "    chats = len(group[group['type'] == 'chat'])\n",
+    "    thinks = len(group[group['type'] == 'think'])\n",
+    "    kills = len(group[group['type'] == 'kill'])\n",
+    "    \n",
+    "    target = winner_stats if player == game_winners[game_id] else loser_stats\n",
+    "    target['chats'].append(chats)\n",
+    "    target['thinks'].append(thinks)\n",
+    "    target['kills'].append(kills)\n",
+    "\n",
+    "# Calculate averages\n",
+    "behavior_comparison = pd.DataFrame({\n",
+    "    'Metric': ['Chats/Game', 'Thinks/Game', 'Kills/Game'],\n",
+    "    'Winners': [\n",
+    "        np.mean(winner_stats['chats']) if winner_stats['chats'] else 0,\n",
+    "        np.mean(winner_stats['thinks']) if winner_stats['thinks'] else 0,\n",
+    "        np.mean(winner_stats['kills']) if winner_stats['kills'] else 0\n",
+    "    ],\n",
+    "    'Losers': [\n",
+    "        np.mean(loser_stats['chats']) if loser_stats['chats'] else 0,\n",
+    "        np.mean(loser_stats['thinks']) if loser_stats['thinks'] else 0,\n",
+    "        np.mean(loser_stats['kills']) if loser_stats['kills'] else 0\n",
+    "    ]\n",
+    "})\n",
+    "behavior_comparison['Difference'] = behavior_comparison['Winners'] - behavior_comparison['Losers']\n",
+    "\n",
+    "print('Winner vs Loser Behavior (across all games):')\n",
+    "behavior_comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.2 Key Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate correlations between behaviors and win rates\n",
+    "def pearson_corr(x, y):\n",
+    "    \"\"\"Calculate Pearson correlation coefficient.\"\"\"\n",
+    "    if len(x) != len(y) or len(x) < 2:\n",
+    "        return 0\n",
+    "    n = len(x)\n",
+    "    sum_x, sum_y = sum(x), sum(y)\n",
+    "    sum_xy = sum(xi * yi for xi, yi in zip(x, y))\n",
+    "    sum_x2 = sum(xi ** 2 for xi in x)\n",
+    "    sum_y2 = sum(yi ** 2 for yi in y)\n",
+    "    num = n * sum_xy - sum_x * sum_y\n",
+    "    den = ((n * sum_x2 - sum_x ** 2) * (n * sum_y2 - sum_y ** 2)) ** 0.5\n",
+    "    return num / den if den != 0 else 0\n",
+    "\n",
+    "# Per-model aggregates for talking games\n",
+    "models = ['gemini-3-flash', 'kimi-k2', 'qwen3-32b', 'gpt-oss-120b']\n",
+    "talking_games = games_df[games_df['mode'] == 'talking']\n",
+    "talking_chats = chat_df[chat_df['mode'] == 'talking']\n",
+    "\n",
+    "chat_counts = [len(talking_chats[talking_chats['model'] == m]) for m in models]\n",
+    "win_rates = [(talking_games['winner_model'] == m).sum() / len(talking_games) * 100 for m in models]\n",
+    "\n",
+    "# Keyword counts\n",
+    "promise_counts = []\n",
+    "threat_counts = []\n",
+    "alliance_counts = []\n",
+    "\n",
+    "for model in models:\n",
+    "    msgs = talking_chats[talking_chats['model'] == model]['message'].tolist()\n",
+    "    promise_counts.append(sum(count_keywords(m, PROMISE_KEYWORDS) for m in msgs))\n",
+    "    threat_counts.append(sum(count_keywords(m, THREAT_KEYWORDS) for m in msgs))\n",
+    "    alliance_counts.append(sum(count_keywords(m, ALLIANCE_KEYWORDS) for m in msgs))\n",
+    "\n",
+    "correlations = [\n",
+    "    ('Chats vs Win Rate', pearson_corr(chat_counts, win_rates)),\n",
+    "    ('Promises vs Win Rate', pearson_corr(promise_counts, win_rates)),\n",
+    "    ('Threats vs Win Rate', pearson_corr(threat_counts, win_rates)),\n",
+    "    ('Alliances vs Win Rate', pearson_corr(alliance_counts, win_rates))\n",
+    "]\n",
+    "\n",
+    "corr_df = pd.DataFrame(correlations, columns=['Metric', 'Correlation'])\n",
+    "corr_df['Interpretation'] = corr_df['Correlation'].apply(\n",
+    "    lambda x: 'Strong positive' if x > 0.5 else 'Strong negative' if x < -0.5 else 'Weak/None'\n",
+    ")\n",
+    "\n",
+    "print('Key Correlations (Talking Games):')\n",
+    "corr_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Adversarial Analysis: Extended\n",
+    "\n",
+    "Deep dive into betrayal patterns, gaslighting examples, and hubris detection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.1 Alliance-Then-Attack Patterns (Betrayals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find alliance-then-attack patterns (betrayal sequences)\n",
+    "# Group messages by game\n",
+    "ATTACK_WORDS = ['eliminate', 'kill', 'attack', 'destroy', 'target', 'crush', 'betray', 'backstab']\n",
+    "\n",
+    "# Track alliances and subsequent attacks per game\n",
+    "betrayal_counts = defaultdict(int)\n",
+    "\n",
+    "for game_id in games_df['game_id'].unique():\n",
+    "    game_msgs = chat_df[chat_df['game_id'] == game_id].sort_values('turn')\n",
+    "    \n",
+    "    # Track alliance proposals per player -> target\n",
+    "    alliances = defaultdict(set)  # player -> set of targets proposed to\n",
+    "    \n",
+    "    for _, row in game_msgs.iterrows():\n",
+    "        player = row['player']\n",
+    "        model = row['model']\n",
+    "        msg = row['message'].lower()\n",
+    "        \n",
+    "        # Check for alliance proposal\n",
+    "        if any(kw in msg for kw in ALLIANCE_KEYWORDS):\n",
+    "            for target in ['red', 'blue', 'green', 'yellow']:\n",
+    "                if target != player and target in msg:\n",
+    "                    alliances[player].add(target)\n",
+    "        \n",
+    "        # Check for attack on former ally\n",
+    "        if any(kw in msg for kw in ATTACK_WORDS):\n",
+    "            for target in ['red', 'blue', 'green', 'yellow']:\n",
+    "                if target != player and target in msg and target in alliances[player]:\n",
+    "                    betrayal_counts[model] += 1\n",
+    "\n",
+    "print('Alliance-Then-Attack Sequences (Betrayals) by Model:')\n",
+    "print('='*50)\n",
+    "for model in sorted(betrayal_counts, key=lambda x: -betrayal_counts[x]):\n",
+    "    print(f'  {model}: {betrayal_counts[model]} betrayals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.2 Gaslighting Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract gaslighting messages\n",
+    "gaslight_msgs = []\n",
+    "\n",
+    "for _, row in chat_df.iterrows():\n",
+    "    msg = row['message']\n",
+    "    if any(w in msg.lower() for w in GASLIGHTING_WORDS):\n",
+    "        gaslight_msgs.append({\n",
+    "            'model': row['model'],\n",
+    "            'msg': msg,\n",
+    "            'chips': row['chips']\n",
+    "        })\n",
+    "\n",
+    "# Count by model\n",
+    "gaslight_by_model = Counter(g['model'] for g in gaslight_msgs)\n",
+    "\n",
+    "print(f'Found {len(gaslight_msgs)} gaslighting messages\\n')\n",
+    "print('Gaslighting by Model:')\n",
+    "for model, count in gaslight_by_model.most_common():\n",
+    "    print(f'  {model}: {count}')\n",
+    "\n",
+    "print('\\nExample Gaslighting Messages:')\n",
+    "for g in gaslight_msgs[:5]:\n",
+    "    print(f\"\\n[{g['model']}] ({g['chips']}-chip):\")\n",
+    "    print(f'  \"{g[\"msg\"][:150]}...\"' if len(g['msg']) > 150 else f'  \"{g[\"msg\"]}\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3 Premature Gloating (Hubris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find gloating messages and check if the gloater won\n",
+    "gloat_msgs = []\n",
+    "\n",
+    "for _, row in chat_df.iterrows():\n",
+    "    msg = row['message']\n",
+    "    if any(w in msg.lower() for w in GLOATING_WORDS):\n",
+    "        game_id = row['game_id']\n",
+    "        player = row['player']\n",
+    "        winner = game_winners.get(game_id)\n",
+    "        won = player == winner\n",
+    "        \n",
+    "        gloat_msgs.append({\n",
+    "            'model': row['model'],\n",
+    "            'player': player,\n",
+    "            'msg': msg,\n",
+    "            'won': won,\n",
+    "            'game_id': game_id\n",
+    "        })\n",
+    "\n",
+    "winner_gloats = [g for g in gloat_msgs if g['won']]\n",
+    "loser_gloats = [g for g in gloat_msgs if not g['won']]\n",
+    "\n",
+    "print(f'Total gloating messages: {len(gloat_msgs)}')\n",
+    "print(f'  From winners: {len(winner_gloats)}')\n",
+    "print(f'  From LOSERS (premature hubris!): {len(loser_gloats)}')\n",
+    "\n",
+    "if loser_gloats:\n",
+    "    print(f'\\nPREMATURE GLOATING - said \"game over\" but LOST:')\n",
+    "    for g in loser_gloats[:3]:\n",
+    "        print(f\"\\n[{g['model']}] (LOST):\")\n",
+    "        print(f'  \"{g[\"msg\"][:120]}...\"' if len(g['msg']) > 120 else f'  \"{g[\"msg\"]}\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.4 Adversarial Findings Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('''\n",
+    "================================================================================\n",
+    "                    ADVERSARIAL ANALYSIS - KEY FINDINGS\n",
+    "================================================================================\n",
+    "\n",
+    "1. THE GASLIGHTING CHAMPION: gemini-3-flash\n",
+    "   - Uses \"look at the board\" / \"clearly\" / \"obviously\" most frequently\n",
+    "   - Cold, calculated dismissal of opponents' positions\n",
+    "   - Correlates with highest win rate improvement (+26%)\n",
+    "\n",
+    "2. THE DESPERATE MANIPULATOR: gpt-oss-120b  \n",
+    "   - Sends 62% of all messages but loses more with chat\n",
+    "   - Heavy use of begging/pleading (\"please help\", \"I need\")\n",
+    "   - Desperation signals weakness -> gets targeted\n",
+    "\n",
+    "3. PREMATURE GLOATING (HUBRIS)\n",
+    "   - Multiple messages where player said \"game over\" but LOST\n",
+    "   - Hubris is real even in LLMs!\n",
+    "   - Overconfidence may trigger coordinated retaliation\n",
+    "\n",
+    "4. BETRAYAL PATTERNS\n",
+    "   - Alliance-then-attack sequences detected across all models\n",
+    "   - Quality > Quantity: fewer betrayals but more effective\n",
+    "\n",
+    "5. DECEPTION-WIN CORRELATION\n",
+    "   - Models that promise more AND follow through less tend to win\n",
+    "   - Cold, calculated betrayal > desperate manipulation\n",
+    "   - Late-game betrayal timing is crucial\n",
+    "\n",
+    "================================================================================\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Lying vs Bullshitting Framework"
    ]
   },
   {
@@ -1518,7 +1891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. Private Reasoning Analysis"
+    "## 14. Private Reasoning Analysis"
    ]
   },
   {
@@ -1609,7 +1982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12. Deception Tactics by Model"
+    "## 15. Deception Tactics by Model"
    ]
   },
   {
@@ -1735,7 +2108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13. DePaulo Pre-Betrayal Patterns"
+    "## 16. DePaulo Pre-Betrayal Patterns"
    ]
   },
   {
@@ -1867,7 +2240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 14. AI Safety Implications"
+    "## 17. AI Safety Implications"
    ]
   },
   {
@@ -1921,7 +2294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15. Summary"
+    "## 18. Summary"
    ]
   },
   {
